# witt

./: .gitignore  LICENSE  README.md  mcp_server.py  pyproject.toml
examples/: agent_loop.py  argument_binding.py  binding_eval.py  grounding_eval.py  live_agent_gated.py  oracle_eval.py  possibility_space.py  quickstart.py  rule_audit.py
src/truthgate/: __init__.py  autogen.py  engine.py  state.py  supervisor.py
src/witt/: __init__.py  autogen.py  engine.py  grounding.py  state.py  supervisor.py
tests/: test_audit.py  test_bfcl.py  test_binding.py  test_differential.py  test_engine.py  test_grounding.py  test_oracle.py  test_space.py  test_supervisor.py
